--- a/ConsoleApp/App.config
+++ b/ConsoleApp/App.config
@@ -3,14 +3,15 @@
     <configSections>
         <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="PocUnifiedLogWorker.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+            <section name="PocUnifiedLogWorkerCommon.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
-    <applicationSettings>
-        <PocUnifiedLogWorker.Properties.Settings>
+  
+      <applicationSettings>
+        <PocUnifiedLogWorkerCommon.Properties.Settings>
             <setting name="WatchedDir" serializeAs="String">
                 <value>D:\searches</value>
             </setting>
@@ -20,7 +21,7 @@
             <setting name="BlockSize" serializeAs="String">
                 <value>500</value>
             </setting>
-        </PocUnifiedLogWorker.Properties.Settings>
+        </PocUnifiedLogWorkerCommon.Properties.Settings>
     </applicationSettings>
 
   <log4net>
