--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\Common\packages.config" />
   <repository path="..\ConsoleApp\packages.config" />
   <repository path="..\packages.config" />
+  <repository path="..\Service\packages.config" />
 </repositories>
