* We can now handle the situation where we tried to open a locked file. This can happen if we try to grab the file and the file creator is not yet done with it.

--- a/Service/App.config
+++ b/Service/App.config
@@ -22,6 +22,12 @@
       <setting name="BlockSize" serializeAs="String">
         <value>500</value>
       </setting>
+      <setting name="ErrorDir" serializeAs="String">
+        <value>/home/nick/kinesis/data/errors</value>
+      </setting>
+      <setting name="LockFileGraceSeconds" serializeAs="String">
+        <value>60</value>
+      </setting>
     </PocUnifiedLogWorkerCommon.Properties.Settings>
   </applicationSettings>
 
