--- a/Common/Properties/Settings.settings
+++ b/Common/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="BlockSize" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">500</Value>
     </Setting>
+    <Setting Name="ErrorDir" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">D:\searches\Errors</Value>
+    </Setting>
+    <Setting Name="LockFileGraceSeconds" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">60</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
