--- a/Common/app.config
+++ b/Common/app.config
@@ -16,6 +16,12 @@
             <setting name="BlockSize" serializeAs="String">
                 <value>500</value>
             </setting>
+            <setting name="ErrorDir" serializeAs="String">
+                <value>D:\searches\Errors</value>
+            </setting>
+            <setting name="LockFileGraceSeconds" serializeAs="String">
+                <value>60</value>
+            </setting>
         </PocUnifiedLogWorkerCommon.Properties.Settings>
     </applicationSettings>
 </configuration>
