--- a/ConsoleApp/App.config
+++ b/ConsoleApp/App.config
@@ -16,11 +16,17 @@
                 <value>D:\searches</value>
             </setting>
             <setting name="CycleMsec" serializeAs="String">
-                <value>500</value>
+                <value>5</value>
             </setting>
             <setting name="BlockSize" serializeAs="String">
                 <value>500</value>
             </setting>
+          <setting name="ErrorDir" serializeAs="String">
+            <value>D:\searches\Errors</value>
+          </setting>
+          <setting name="LockFileGraceSeconds" serializeAs="String">
+            <value>60</value>
+          </setting>
         </PocUnifiedLogWorkerCommon.Properties.Settings>
     </applicationSettings>
 
